# plane2d

./: .clang-format  .gitignore  .gitmodules  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  README.md  build.sh  rebuild.sh  release.sh  run.sh  setup.sh
CMake/: FindTmxParser.cmake  FindYamlCpp.cmake
data/config/: game.yaml  menu.yaml
data/graphics/tiles/: spritesheet-1.json
data/maps/: platformer.tmx
dependencies/: .gitignore  build_SFML.sh  build_tmxparser.sh  build_yaml-cpp.sh
docs/: installation.md
old/: animation.cpp  animation_handler.cpp  animation_handler.h  game.cpp  game.h  game_state_world.cpp  main.cpp  map.h  texture_manager.cpp  tile.h
scripts/: install-sfml-deps.sh  install-sfml.sh
src/: CMakeLists.txt  animation.cpp  animation.h  animation_handler.cpp  animation_handler.h  game.cpp  game.h  game_manager.cpp  game_manager.h  game_state.h  game_state_menu.cpp  game_state_menu.h  game_state_world.cpp  game_state_world.h  main.cpp  map.cpp  map.h  plane.cpp  plane.h  texture_manager.cpp  texture_manager.h  tile.cpp  tile.h
src/engine/: CMakeLists.txt  config.cpp  config.h  engine.cpp  engine.h  game.cpp  game.h  renderer.cpp  renderer.h  resource_manager.cpp  resource_manager.h  texture.cpp  texture.h  tile_map.cpp  tile_map.h  window.cpp  window.h
src/engine/ecs/: CMakeLists.txt  controllable.cpp  controllable.h  drawable.cpp  drawable.h  entity.cpp  entity.h  entity_builder.cpp  entity_builder.h  entity_container.cpp  entity_container.h  movable.h  movable_entity.cpp  movable_entity.h  player.cpp  player.h
src/engine/ecs/components/: input_component.cpp  input_component.h  view_component.cpp  view_component.h
src/engine/ecs/components/input/: player_input.cpp  player_input.h
src/engine/ecs/components/view/: player_view.cpp  player_view.h
src/engine/input/: CMakeLists.txt  global_input.cpp  global_input.h  input.cpp  input.h
src/engine/maps/: map.h  map_loader.cpp  map_loader.h  tile.h
src/engine/states/: CMakeLists.txt  state.cpp  state.h  state_builder.cpp  state_builder.h  state_manager.cpp  state_manager.h  view.cpp  view.h
src/engine/states/menu/: menu_input.cpp  menu_input.h  menu_state.cpp  menu_state.h  menu_view.cpp  menu_view.h
src/engine/states/world/: world_input.cpp  world_input.h  world_state.cpp  world_state.h  world_view.cpp  world_view.h
src/engine/ui/: CMakeLists.txt  button.cpp  button.h  mouse_listener.cpp  mouse_listener.h
src/engine/utils/: logger.h
src/engine/utils/json/: json-forwards.h  json.h  jsoncpp.cpp
src/engine/utils/tmxparser/: CMakeLists.txt  Tmx.h
src/input/: input.h  menu_input.cpp  menu_input.h
src/input/menu/: input_menu.cpp  input_menu.h
src/platformer/: CMakeLists.txt  entity_container.cpp  entity_container.h  main.cpp  platformer.cpp  platformer.h
src/platformer/entities/: mario.cpp  mario.h
src/utils/: logger.h
src/view/: menu_view.cpp  menu_view.h  mouse_listener.cpp  mouse_listener.h
src/view/menu/: button.cpp  button.h
test/tmxparser/: test.cpp
